# src/Entity/Userb.php
@@ -95,7 +95,7 @@ class Userb implements UserInterface
      */
     public function getUsername(): string
     {
-        return (string)$this->email;
+        return (string)$this->username;
     }
 
     /**
